@@ -47,12 +47,13 @@ public class UserService {
 
     public List<UserEntity> getSingleUser(String username) {
         List<UserEntity> users = userRepository.findByName(username);
-        if (!users.isEmpty() && (users.get(0).getFriend_list() == null || users.get(0).getFriend_requests() == null)) {
-            users.get(0).setFriend_list(new ArrayList<>());
-            users.get(0).setFriend_requests(new ArrayList<>());
+        if (!users.isEmpty() && (users.getFirst().getFriend_list() == null ||
+                users.getFirst().getFriend_requests() == null)) {
+            users.getFirst().setFriend_list(new ArrayList<>());
+            users.getFirst().setFriend_requests(new ArrayList<>());
         }
         if (!users.isEmpty()) {
-            userRepository.save(users.get(0));
+            userRepository.save(users.getFirst());
         }
         return users;
     }
